fix ionic item dark mode background color

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -315,7 +315,7 @@ $app-theme: mat-light-theme(
     --ion-color-step-850: #dbdbdb;
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
-    --ion-item-background: #1e1e1e;
+    --ion-item-background: #36393f;
     --ion-toolbar-background: #1f1f1f;
     --ion-tab-bar-background: #1f1f1f;
     --ion-card-background: #1e1e1e;
